--- a/recall/src/app/alumni/alumni.component.html
+++ b/recall/src/app/alumni/alumni.component.html
@@ -108,7 +108,9 @@
 
       <div class="foot1divs">
         <div class="qlink" style="padding-left: 70px;">
-        <div><img height="65" src="{{logoPath2}}" alt=""></div>        
+        <div><img height="65" src="{{logoPath2}}" alt=""></div>  
+        <p class="linkhead">Quick Links</p>   
+        <hr class="linkheadhr">   
            <p class="flinks">
               <span class="link1 spanlink"[routerLink]="['/']">About</span>
               <span class="spanlink" [routerLink]="['/Alumni/Alumni-Chapters']">Chapters</span>
@@ -116,6 +118,16 @@
               <span class="spanlink" [routerLink]="['/Alumni/Gallery']">Gallary</span>
               <span class="spanlink" [routerLink]="['/Alumni/contact-us']">Contact</span>
            </p>
+           <p class="linkhead">Links</p>   
+           <hr class="linkheadhr">   
+              <p class="flinks">
+                 <a href="https://www.svis.school/"  class="link1 spanlink">SVIS</a>
+                 <a href="http://svdc.education/" class="spanlink" >SVDC</a>
+                 <a href="http://svec.education/" class="spanlink" >SVEC</a>
+                 <a href="http://svcn.education/" class="spanlink">SVCN</a>
+                 <a href="http://svcp.education/" class="spanlink" >SVCP</a>
+                 <a href="http://svim.education/" class="spanlink" >SVIM</a>
+              </p>
            <p class="copyrighttext">Copyright © 2018 RecallVidyanikethan.</p>
            <p class="copyrighttext">All rights reserved.</p>
         </div>
