--- a/recall/src/app/alumni/login-alumni/login-alumni.component.html
+++ b/recall/src/app/alumni/login-alumni/login-alumni.component.html
@@ -39,7 +39,7 @@
     </div>
     <div class="outbut">
       <button class="logout" (click)="logout()">Logout</button>
-      <button class="edit" [routerLink]="['/Alumni/updateProfile']" >update Profile</button>
+      <button class="edit" [routerLink]="['/Alumni/updateProfile']" >Update Profile</button>
     </div>
   </div>
   <!--  -->
